[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["Ashley Casimir <ashcas@me.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.5"
matplotlib = "^3.3.3"
jupyterlab = "^3.0.5"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
